--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
+    "@types/react-native-snap-carousel": "^3.8.2",
     "react": "16.13.1",
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0"
   },
   "devDependencies": {
