--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.11.0",
+    "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0"
   },
