--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "@types/react-native-snap-carousel": "^3.8.2",
+    "@types/react-redux": "^7.1.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-flash-message": "^0.1.18",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^1.13.1",
@@ -25,7 +28,10 @@
     "react-native-screens": "^2.11.0",
     "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-svg": "^12.1.0"
+    "react-native-svg": "^12.1.0",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
