--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-shimmer-placeholder": "^2.0.6",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^12.1.0",
+    "react-native-webview": "^11.0.2",
+    "react-native-youtube-iframe": "^1.4.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
