--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-redux": "^7.1.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
+    "react-native-code-push": "^7.0.0",
     "react-native-flash-message": "^0.1.18",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
