--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.37.0
+
+MYAPP_UPLOAD_STORE_FILE=the-movie.keystore
+MYAPP_UPLOAD_KEY_ALIAS=the-movie
+MYAPP_UPLOAD_STORE_PASSWORD=!Sendok3646
+MYAPP_UPLOAD_KEY_PASSWORD=!Sendok3646
