--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-clipboard/clipboard": "^1.6.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.7.5",
@@ -19,7 +20,6 @@
     "@types/react-redux": "^7.1.13",
     "react": "16.13.1",
     "react-native": "0.63.2",
-    "react-native-code-push": "^7.0.0",
     "react-native-flash-message": "^0.1.18",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-linear-gradient": "^2.5.6",
